--- a/vue/css/style1.css
+++ b/vue/css/style1.css
@@ -2,13 +2,15 @@ body {
     line-height: 1; }
   
 ol, ul {
-    list-style: none; }
+    list-style: none;
+ }
     
     .wrap {
         width: 1200px;
         margin: 0 auto; }
 
         #horizontal{
+            font-size: 25px;
             padding:0;
             margin:0;
             list-style-type:none;
@@ -52,13 +54,13 @@ ol, ul {
         
         #header {
             background: url("img2/header.png") repeat;
-            height: 72px; 
+            height: 120px; 
         }
 
 
         #subheader {
             background: url("img2/subheader.png") repeat;
-            height: 150px; }
+            height: 50px; }
 
 
 
@@ -71,7 +73,3 @@ ol, ul {
             background: url("img2/footer.png") repeat; 
         } 
 
-       .image{
-        max-width: 100%;
-        height: auto;
-       }
