--- a/vue/css/style1.css
+++ b/vue/css/style1.css
@@ -1,10 +1,10 @@
 body {
     line-height: 1; }
-  
+
 ol, ul {
     list-style: none;
  }
-    
+
     .wrap {
         width: 1200px;
         margin: 0 auto; }
@@ -16,14 +16,14 @@ ol, ul {
             list-style-type:none;
             display: block;
             margin-left:30px;
-            float:left; 
+            float:left;
     }
     table {
         border: medium solid #000000;
         border-collapse: collapse;
         width: 100%;
         }
-        
+
         th {
         font-family: monospace;
         border: thin solid #000000;
@@ -31,7 +31,7 @@ ol, ul {
         height: 70px;
         padding: 5px;
         background-color: #D0E3FA;
-        
+
         }
         td {
         font-family: sans-serif;
@@ -51,10 +51,10 @@ ol, ul {
             width: 250px;
         }
 
-        
+
         #header {
             background: url("img2/header.png") repeat;
-            height: 120px; 
+            height: 120px;
         }
 
 
@@ -70,6 +70,10 @@ ol, ul {
             negative: value of footer height;
             height: 57px;
             clear: both;
-            background: url("img2/footer.png") repeat; 
-        } 
+            background: url("img2/footer.png") repeat;
+        }
 
+        img {
+            height: 100%;
+          width: 100%;
+        }
